; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/shimdbg/extr_shimdbg.c_CallApphelpWithImage.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/shimdbg/extr_shimdbg.c_CallApphelpWithImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_7__ = type { i64, i32 }

@.str = private unnamed_addr constant [23 x i8] c"Calling %s %s mapping\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"with\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"without\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CallApphelpWithImage(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_6__, align 4
  %10 = alloca %struct.TYPE_7__, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %12 = bitcast %struct.TYPE_6__* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 8, i1 false)
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i64 @MapFile(i8* %13, %struct.TYPE_6__* %9, i32 %14)
  store i64 %15, i64* %11, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0)
  %21 = call i32 @xprintf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %20)
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @RtlInitUnicodeString(i32* %22, i32 %24)
  %26 = load i64, i64* %11, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %4
  %29 = load i64, i64* %11, align 8
  br label %31

30:                                               ; preds = %4
  br label %31

31:                                               ; preds = %30, %28
  %32 = phi i64 [ %29, %28 ], [ -1, %30 ]
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  store i64 %32, i64* %33, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @CallApphelp(i32 %34, %struct.TYPE_7__* %10)
  %36 = load i64, i64* %11, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %31
  %39 = load i64, i64* %11, align 8
  %40 = call i32 @NtClose(i64 %39)
  br label %41

41:                                               ; preds = %38, %31
  %42 = call i32 @RtlFreeUnicodeString(%struct.TYPE_6__* %9)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @MapFile(i8*, %struct.TYPE_6__*, i32) #2

declare dso_local i32 @xprintf(i8*, i8*, i8*) #2

declare dso_local i32 @RtlInitUnicodeString(i32*, i32) #2

declare dso_local i32 @CallApphelp(i32, %struct.TYPE_7__*) #2

declare dso_local i32 @NtClose(i64) #2

declare dso_local i32 @RtlFreeUnicodeString(%struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
